# AutoVQA

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV.md  LICENSE  Poetry_Guideline.md  README.md  pyproject.toml
.github/workflows/: code-quality.yml  tests.yml
docs/: example.ipynb  getting_started.ipynb
src/autovqa/: __init__.py
src/autovqa/augment/: client.py  config.py  sample_config.toml  schema.py  utils.py
src/autovqa/balancer/: __init__.py  balancer.py  balancer_pipeline.py  config.py  config.toml
src/autovqa/collect/: __init__.py
src/autovqa/collect/utils/: data_configs.py  data_downloader.py  data_utils.py  image_downloader.py
src/autovqa/config/: config.py
src/autovqa/eda/: __init__.py  config.py  config.toml  eda_pipeline.py  processors.py
src/autovqa/evaluate/: __init__.py  evaluate_df.py  gemini_config.py  prompts.py  utils.py
src/autovqa/exploratory_data_analysis/: config.py  eda.py  key_mapper.py  utils.py
src/autovqa/filter/: __init__.py  filter.py  filter_pipeline.py
src/autovqa/preprocess/: README.md  main.py
src/autovqa/preprocess/image/: color_correction.py  denoise.py  find_common_size.py  normalize.py  readme.md  resize.py  segmentation.py  sharpening.py
tests/: test_dqa_cpipeline.ipynb  test_filter_pipeline.py  test_import.py  test_pipeline_integration.py  test_tools.py
