[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "autovqa"
version = "0.1.0"
description = "A Python library for automated visual question answering data generation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "opencv-python>=4.5",
    "Pillow>=9.0",
    "requests>=2.28",
    "tqdm>=4.64",
    "loguru>=0.7.3",
]

# dev group cho Poetry v2
[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.0"
black = ">=21.0"
isort = ">=5.0"
flake8 = ">=3.8"
mypy = ">=0.900"
pre-commit = ">=2.15.0"
