[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "autovqa"
version = "0.1.0"
description = "A Python library for automated visual question answering data generation."
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "numpy==2.0.2",
    "pandas==2.3.3",
    "opencv-python==4.12.0.88",
    "pillow==12.0.0",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "appdirs==1.4.4",
    "loguru>=0.7.3",
    "gdown",
    "aiohttp",
    "tomli",
    "openai",
    "pydantic",
    "python-dotenv",
    "google-genai",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "black==25.11.0",
    "isort==7.0.0",
    "flake8==7.3.0",
    "mypy==1.18.2",
    "pre-commit==4.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "autovqa.__version__"}

# dev group cho Poetry v2
[tool.poetry.group.dev.dependencies]
pytest = "==9.0.1"
pytest-cov = "==7.0.0"
black = "==25.11.0"
isort = "==7.0.0"
flake8 = "==7.3.0"
mypy = "==1.18.2"
pre-commit = "==4.5.0"
